# betterdecimal

./: LICENSE  README.md  pyproject.toml  tox.ini
number/: __init__.py  exceptions.py  number.py  rounding.py
tests/: test_number.py
