[tool.poetry]
name = "number"
version = "0.0.0"
description = "Improvement on Python's built in Decimal class, for easier use in real life."
authors = ["Lauri Vuorela <lauri.vuorela@gmail.com>"]
license = "MIT"
homepage = "https://github.com/justcallmelarry/number"
repository = "https://github.com/number/number"
keywords = ["number"]
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Developers",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.7 || ^3.8 || ^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
flake8-black = "^0.2.0"
flake8-isort = "^4.0.0"
isort = { version = "^5.5.3", extras = ["pyproject"] }
pytest = "^6.1.0"
pytest-cov = "^2.10.0"
black = "=20.8b1"
mypy = "^0.782"
codecov = "^2.1.9"

[tool.black]
line-length = 120
target_version = ["py36", "py37", "py38"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = "beautiful"
skip = ".mypy_cache,__pycache__"
